Modify AuditLogHelper.checkAuditEventValuesForTransactionId to do a set comparison and not a list comparison.